# rust-nostr-mcp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: blossom.rs  config.rs  content.rs  main.rs  mcp.rs  mcp_apps.rs  nip46.rs  nostr_client.rs  tools.rs  ui_templates.rs
ui/: article-card.html  common.css  connect-qr.html  note-card.html  profile-card.html  zap-button.html
